<resources>
    <string name="app_name">EmployeeSalaryApp</string>
    <string name="hint_employee_name">Employee Name</string>
    <string name="hint_gross_salary">Gross Salary</string>
    <string name="btn_calculate">Calculate</string>
    <string name="btn_clear">Clear</string>
    <string name="error_missing_input">Error: Please enter Name and Salary</string>
    <string name="title_calculation_result">Calculation Result</string>
    <string name="title_calculation_history">Calculation History</string>
    <string name="text_no_history">No history yet.</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_salary_required">Salary is required</string>
    <string name="error_invalid_salary">Enter a valid positive number</string>
    <string name="msg_please_enter_name">Please enter a name</string>
    <string name="msg_please_enter_salary">Please enter a salary</string>
    <string name="msg_fields_cleared">Fields cleared</string>
    <string name="tax_table_title">Tax Rules</string>
    <string name="tax_table_message">0 - 10,000: 5%\n10,001 - 30,000: 7%\nAbove 30,000: 10%</string>
    <string name="btn_share_history">Share History</string>
    <string name="share_history_title">Employee Salary History</string>
</resources>